Primeira versão com o novo Framework SwaggerServlets
