# src/main/java/com/crivano/bluc/rest/server/TestGet.java
@@ -1,20 +1,21 @@
 package com.crivano.bluc.rest.server;
 
-import org.json.JSONObject;
+import com.crivano.bluc.rest.server.IBlueCrystal.ITestGet;
+import com.crivano.bluc.rest.server.IBlueCrystal.TestGetRequest;
+import com.crivano.bluc.rest.server.IBlueCrystal.TestGetResponse;
+import com.crivano.swaggerservlet.ISwaggerCacheableMethod;
 
-import com.crivano.restservlet.ICacheableRestAction;
-
-public class TestGet implements ICacheableRestAction {
-
-	@Override
-	public void run(JSONObject req, JSONObject resp) throws Exception {
-		resp.put("provider", "Blue Crystal REST");
-		resp.put("version", "1.0");
-		resp.put("status", "OK");
-	}
+public class TestGet implements ITestGet, ISwaggerCacheableMethod {
 
 	@Override
 	public String getContext() {
 		return "bluc-test";
+	}
+
+	@Override
+	public void run(TestGetRequest req, TestGetResponse resp) throws Exception {
+		resp.provider = "Blue Crystal REST";
+		resp.version = "1.0";
+		resp.status = "OK";
 	}
 }
